# n8n-nodes-rust-starter

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  RUST.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
examples/: photon-image-processor-usage.md  usage.md
nodes/PhotonImageProcessor/: PhotonImageProcessor.node.ts
shared/: RustWasmWrapper.ts  types.ts
src-rust/: Cargo.toml
src-rust/src/: image_processor.rs  lib.rs  wasm.rs
